[package]
name = "tindercrypt"
version = "0.1.0"
authors = ["Alex Pyrgiotis <apyrgio@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
protobuf = "2.7.*"
rand = "0.6"
# There are no stable versions of ring, meaning that we must always compile the
# newest version to ensure that the latest security patches are there.
ring = "*"
# NOTE: The following dependencies are required only for the CLI version of the
# crate.
clap = "2.33.*"
dialoguer = "0.4.*"
lazy_static = "1.3.*"

[dev-dependencies]
assert_cmd = "0.11.*"
assert_fs = "0.11.*"
predicates = "1.0.*"

[build-dependencies]
protoc-rust = { version = "2.7.*", optional = true }

[features]
# Generate Rust code from .proto files.
proto-gen = ["protoc-rust"]
