[package]
name = "tindercrypt"
version = "0.2.0"
authors = ["Alex Pyrgiotis <apyrgio@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = """
Data encryption with symmetric cryptographic keys or passwords/passphrases,
and self-contained encryption metadata"
"""
homepage = "https://github.com/apyrgio/tindercrypt"
repository = "https://github.com/apyrgio/tindercrypt"
documentation = "https://docs.rs/tindercrypt"
readme = "README.md"
keywords = ["protocol-buffers", "cryptorgraphy", "encryption"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
protobuf = "2"
rand = "0.7"
# XXX: There are no stable versions of `ring` [1], meaning that we must always
# compile the newest version to ensure that the latest security patches are
# there. However, this means that our library may break whenever `ring` changes
# its API. We'll pin the `ring` version for now, but we have to find a way to
# deal with this at some point.
#
# [1]: https://github.com/briansmith/ring#versioning--stability
ring = "0.16"
# NOTE: The following dependencies are required only for the CLI version of the
# crate, and are only included if the `cli` feature is enabled. See also
# https://github.com/rust-lang/cargo/issues/1982, for the current state of
# binary-only dependencies in `cargo`.
clap = { version = "2", optional = true }
dialoguer = { version = "0.5", optional = true }
lazy_static = { version = "1", optional = true }

[dev-dependencies]
assert_cmd = "0.12"
assert_fs = "0.13"
predicates = "1"

[build-dependencies]
protoc-rust = { version = "2", optional = true }

[features]
default = ["cli"]

# Dependencies needed specifically for the CLI.
cli = ["clap", "dialoguer", "lazy_static"]
# Generate Rust code from .proto files.
proto-gen = ["protoc-rust"]
